infra/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: furby-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: furby-api
  template:
    metadata:
      labels:
        app: furby-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: ghcr.io/olyxz16/furby/api:latest
          ports:
            - containerPort: 3000
