infra/base/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns-prod"
spec:
  ingressClassName: traefik
  rules:
    - host: furby-api.olyxz16.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80

  tls:
    - hosts:
        - furby-api.olyxz16.fr
      secretName: api-tls-cert
